--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,30 @@
 			<version>2.11.1</version>
 		</dependency>
 
-
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 <dependency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
     <version>4.0.1</version>
 </dependency>
-
-
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+				<!-- <includes> <include>CheckBox.java</include>	</includes> -->
+					<suiteXmlFiles>
+			<!-- 			<suiteXmlFile>${testxml}</suiteXmlFile>		 -->
+						<suiteXmlFile>testngList.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+		<finalName>assignment-framework</finalName>
+	</build>
+	
 </project>
