--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,16 @@
 	<groupId>SeleniumFramework</groupId>
 	<artifactId>SeleniumFramework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<packaging>jar</packaging>
+
+	<name>SeleniumFramework</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -55,13 +65,13 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>4.0.1</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.0.1</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -69,15 +79,15 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
 				<configuration>
-				<!-- <includes> <include>CheckBox.java</include>	</includes> -->
+					<!-- <includes> <include>CheckBox.java</include> </includes> -->
 					<suiteXmlFiles>
-			<!-- 			<suiteXmlFile>${testxml}</suiteXmlFile>		 -->
+						<!-- <suiteXmlFile>${testxml}</suiteXmlFile> -->
 						<suiteXmlFile>testngList.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>assignment-framework</finalName>
+		<finalName>selenium-framework</finalName>
 	</build>
-	
+
 </project>
