--- a/test-output/old/Suite/TestFireFox.properties
+++ b/test-output/old/Suite/TestFireFox.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=TestFireFox][SuiteResult context=TestChrome]
+[SuiteResult context=TestChrome][SuiteResult context=TestFireFox]
